add remote activity and data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MainActivity" android:screenOrientation="portrait">
+        <activity android:name=".MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".RemoteActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ui.RemoteActivity" android:screenOrientation="portrait"/>
         <activity android:name=".ui.LocalActivity" android:screenOrientation="portrait"/>
     </application>
 
