--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,35 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
+    ext.versions = [
+            'compileSdk'      : 28,
+            'minSdk'          : 21,
+            'targetSdk'       : 28,
+            'constraintLayout': '1.1.2',
+            'supportLibrary'  : '1.0.0',
+            'multidex'        : '2.0.0',
+            'lifecycle'       : '2.0.0',
+            'room'            : '2.0.0',
+            'glide'           : '4.9.0',
+            'rxjava2'         : '2.1.13',
+            'rxandroid'       : '2.0.1',
+            'retrofit'        : '2.4.0',
+            'utilcode'        : '1.17.2',
+            'kotlin'          : '1.2.51',
+    ]
+
+    ext.names = [
+            'applicationId': 'com.ruzhan.rxrepository'
+    ]
     
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -20,17 +42,4 @@ allprojects {
         google()
         jcenter()
     }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
-
-ext {
-    minSdkVersion = 19
-    targetSdkVersion = 27
-    compileSdkVersion = 27
-    buildToolsVersion = '27.0.3'
-
-    supportLibraryVersion = '27.1.1'
 }
